public/css/dragndrop.css
body {
    position: relative;
}
.melis-cms-dnd-box {
    position: fixed;
    top: 0;
    right: -4px;
    width: 200px;
    height: 100%;
    font-family: 'Lato', sans-serif;
    font-weight: normal;
    font-style: normal;
    font-size: 14px;
    line-height: 25px;
    border-bottom: 4px solid #e61c23;
    border-left: 4px solid #e61c23;
    background: #373737;
    transform: translate3d(200px, 0, 0);
    -webkit-transform: translate3d(200px, 0, 0);
    -moz-transform: translate3d(200px, 0, 0);
    -ms-transform: translate3d(200px, 0, 0);
    transition: transform 0.4s, height 0.4s;
    -webkit-transition: transform 0.4s, height 0.4s;
    -moz-transition: transform 0.4s, height 0.4s;
    z-index: 9999999;
}
.melis-cms-dnd-box.show {
    transform: translate3d(0, 0, 0);
    -webkit-transform: translate3d(0, 0, 0);
    -moz-transform: translate3d(0, 0, 0);
    -ms-transform: translate3d(0, 0, 0);
}

.melis-cms-dnd-box #melisPluginBtn {
    position: absolute;
    top: 50px;
    left: -44px;
    padding: 8px 10px 5px;
    background-color: #e61c23;
    border-top-left-radius: 4px;
    border-bottom-left-radius: 4px;
    color: #fff;
    cursor: pointer;
}

.melis-cms-dnd-fix-menu {
    height: 100%;
    overflow-y: auto;
}

.melis-cms-dnd-box #melisPluginBtn {
    position: absolute;
    top: 50px;
    left: -44px;
    padding: 8px 10px 5px;
    background-color: #e61c23;
    border-top-left-radius: 4px;
    border-bottom-left-radius: 4px;
    color: #fff;
    cursor: pointer;
}

.melis-cms-dnd-box #melisPluginBtn .fa {
    font-size: 20px;
}

.melis-cms-dnd-fix-menu.show {
    transform: translate3d(0, 0, 0);
    -webkit-transform: translate3d(0, 0, 0);
    -moz-transform: translate3d(0, 0, 0);
    -ms-transform: translate3d(0, 0, 0); }

.melis-cms-plugin-snippets,
.melis-cms-category-plugins {
    position: relative;
    padding: 15px 0 10px;
    border-bottom: 1px solid #3e3e3e;
    background: #2c2c2c;
    text-align: center;
    opacity: 0.4;
    cursor: pointer;
    transition: opacity 0.4s, background 0.4s;
    -webkit-transition: opacity 0.4s, background 0.4s;
    -moz-transition: opacity 0.4s, background 0.4s;
}
.melis-cms-category-plugins {
    border-bottom: 1px solid #3e3e3e;
    background: #131313;
}
.melis-cms-category-plugins:hover {
    background: #b33a35;
    opacity: 1;
}
.melis-cms-plugin-snippets:hover {
    opacity: 1;
    background: #e61c23;
}
.melis-cms-plugin-snippets:hover img,
.melis-cms-category-plugins:hover img {
    transform: scale(0.8);
    -webkit-transform: scale(1);
    -moz-transform: scale(1);
}

.melis-cms-plugin-snippets img,
.melis-cms-category-plugins img {
    border-radius: 2px;
    transition: transform 0.4s;
    -webkit-transition: transform 0.4s;
    -moz-transition: transform 0.4s;
    transition: transform 0.4s;
    transform: scale(0.8);
    -webkit-transform: scale(0.8);
    -moz-transform: scale(0.8);
}
.melis-cms-plugin-snippets img {
    max-width: 100%;
}
.melis-cms-plugin-snippets {
    margin:0 4px 4px 0;
}

.melis-cms-plugin-snippets:last-child {
    margin-bottom: 0;
}

.melis-cms-plugin-title {
    display: block;
    margin-top: 10px;
    color: #fff;
    letter-spacing: 0.4px;
    font-size: 10px;
    transition: color 0.4s;
    -webkit-transition: color 0.4s;
    -moz-transition: color 0.4s;
}

.melis-cms-ps-box .module-name{
    display: block;
    max-width: 78%;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.melis-cms-plugin-filter-box .melis-cms-ps-box:first-child {
    border-top: 1px solid #2c2c2c;
}

.melis-cms-ps-box .melis-cms-filter-btn,
.melis-cms-category-btn ,
.melis-cms-filter-btn-sub-category,
.melis-cms-filter-btn-mini-tpl-category {
    display: block;
    position: relative;
    padding: 8px 15px;
    font-weight: normal;
    letter-spacing: 1px;
    color: #fff;
    font-size: 10px;
    letter-spacing: 1px;
    border-radius: 2px;
    border-bottom: 1px solid #2c2c2c;
    background: #373737;
    transition: background 0.4s;
    -webkit-transition: background 0.4s, border 0.4s;
    -moz-transition: background 0.4s, border 0.4s;
    -ms-transition: background 0.4s, border 0.4s;
    cursor: pointer;
}

.melis-cms-ps-box .melis-cms-filter-btn:hover,
.melis-cms-category-btn:hover ,
.melis-cms-filter-btn-sub-category:hover,
.melis-cms-filter-btn-mini-tpl-category:hover {
    background: #2c2c2c;
    border-color: #2c2c2c;
}

.melis-cms-ps-box .melis-cms-filter-btn.active,
.melis-cms-category-btn.active {
    background: #e61c23;
    border-color: #e61c23;
}

.melis-cms-ps-box .melis-cms-filter-btn.active .angle-down-menu,
.melis-cms-category-btn.active .angle-down-menu,
.melis-cms-filter-btn-sub-category.active .angle-down-menu,
.melis-cms-filter-btn-mini-tpl-category.active .angle-down-menu {
    transform: rotateZ(-90deg);
    -webkit-transform: rotateZ(-90deg);
    -moz-transform: rotateZ(-90deg);
    -ms-transform: rotateZ(-90deg);
}

.melis-cms-ps-box .melis-cms-filter-btn .angle-down-menu,
.melis-cms-category-btn .angle-down-menu,
.melis-cms-filter-btn-sub-category .angle-down-menu,
.melis-cms-filter-btn-mini-tpl-category .angle-down-menu {
    position: absolute;
    top: 8px;
    right: 15px;
    font-size: 20px;
    transition: transform 0.4s;
}
.melis-cms-category-btn .angle-down-menu {
    font-size: 14px;
    top: 9px;
}

.melis-cms-plugin-snippets-box {
    display: none;
    background: #2c2c2c;
}

.melis-plugin-tooltip {
    position: absolute;
    /*right: calc(100% + 20px);*/
    background: #212121;
    color: #fff;
    line-height: 1.2;
    font-size: 12px;
    /*width: 280px;*/
    padding: 20px;
    border-radius: 4px;
    opacity: 1;
    z-index: 99999999;
    box-shadow: 0px 0px 2px rgba(0,0,0,0.6);
}

.ui-widget.ui-widget-content.melis-plugin-tooltip {
    border: none;
}

.melis-plugin-tooltip {
    font-family: Lato;
    font-size: 12px;
    letter-spacing: 0.4px;
    line-height: 1.3;
    font-weight: normal;
}


.ui-tooltip-content {

}
/* ... */

